# athena

./: .gitignore  BUILD.bazel  Cargo.toml  LICENSE  WORKSPACE  build.rs  commander.go  commander_test.go  commands.go  decode.go  go.mod  go.sum  main.go  math.go  math_test.go
client/: package-lock.json  package.json
client/components/: AutoResponder.tsx  Chat.tsx
client/pages/: index.tsx
src/: .gitignore  main.rs
