load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude forge-gRPC
# gazelle:prefix github.com/tony84727/athena
gazelle(name = "gazelle")

proto_library(
    name = "forge_grpc",
    srcs = glob(["forge-gRPC/src/main/proto/*.proto"]),
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "forge_grpc_go_library",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/tony84727/athena/forgegrpc",
    proto = ":forge_grpc",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "commander.go",
        "decode.go",
        "main.go",
        "math.go",
    ],
    importpath = "github.com/tony84727/athena",
    visibility = ["//visibility:public"],
    deps = [
        ":forge_grpc_go_library",
        "@com_github_knetic_govaluate//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "athena",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["math_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
